# MetEvolSim

./: .gitignore  CMakeLists.txt  Experiment.py  MANIFEST.in  MCMC.py  MetEvolSim_run.py  Model.py  Models.py  MutationAccumulation.py  README.md  SBML_Model.py  SelectionThreshold.py  SensitivityAnalysis.py  collect_selectionthreshold_simulations.py  install.sh  plot.R  setup.cfg  setup.py
BRC_workflow/: collect_selectionthreshold_simulations.py  plot.R  run_selectionthreshold_simulations.py
BRC_workflow/resources/: smallbone2013.xml
Holzhutter2004/: CMakeLists.txt
Holzhutter2004/cmake/: CMakeCache.txt  Config.h  Makefile  cmake_install.cmake  make.sh
Holzhutter2004/example/: .Rapp.history  EVOLUTION_RATE.R  generate_figures.sh  run.sh  tests.R  tests.sh
Holzhutter2004/example/ancestor/: ancestor_adjacency_list.txt  ancestor_conc.txt  ancestor_individual.txt  ancestor_ode_trajectories.txt  ancestor_params.txt  ancestor_stoichiometric_matrix.txt  steady_state.txt
Holzhutter2004/example/best/: best_conc.txt  best_evolrate.txt  best_individual.txt  best_params.txt  mean_evolrate.txt
Holzhutter2004/example/parameters/: parameters.txt
Holzhutter2004/example/population/: cv_s.txt  fitness.txt  mean_s.txt  var_s.txt
Holzhutter2004/model/: adjacency_list.txt  clustering.txt  graph_analysis.py  order_example.txt
Holzhutter2004/sensitivity_analysis/: fitness.txt  init_conc.txt  mean_conc.txt  param.txt  plot.R  sensitivity_analysis.sh  sum.txt  var_conc.txt
Holzhutter2004/sensitivity_analysis - copie/: concentrations_init.txt  concentrations_mean.txt  concentrations_var.txt  fitness.txt  params.txt  sum.txt
Holzhutter2004/src/: run.cpp  sensitivity_analysis.cpp  tests.cpp  workflow.py
Holzhutter2004/src/lib/: Enums.h  Individual.cpp  Individual.h  Macros.h  Node.cpp  Node.h  ODESolver.h  Parameters.cpp  Parameters.h  Population.cpp  Population.h  Prng.h  SensitivityAnalysis.cpp  SensitivityAnalysis.h  Structs.h  Tree.cpp  Tree.h
Liska-et-al-Principles-of-metabolome-conservation-in-animals/: README.md
Liska-et-al-Principles-of-metabolome-conservation-in-animals/DataS2/: .Rhistory  ER_estimates.csv  lipids.rdata  plot_figure.R
Liska-et-al-Principles-of-metabolome-conservation-in-animals/DataS3/: Holzhutter2004_fitness_coupling_exploration.txt  Holzhutter2004_flux_drop_analysis.txt  Holzhutter2004_list_of_parameters.txt  Holzhutter2004_list_of_reactions.txt  Holzhutter2004_list_of_species.txt  Holzhutter2004_outliers.txt  Holzhutter2004_reaction_to_species_map.txt  Holzhutter2004_simulations.txt  Koenig2012_fitness_coupling_exploration.txt  Koenig2012_flux_drop_analysis.txt  Koenig2012_list_of_parameters.txt  Koenig2012_list_of_reactions.txt  Koenig2012_list_of_species.txt  Koenig2012_outliers.txt  Koenig2012_reaction_to_species_map.txt  Koenig2012_simulations.txt  Mulquiney1999_fitness_coupling_exploration.txt  Mulquiney1999_flux_drop_analysis.txt  Mulquiney1999_list_of_parameters.txt  Mulquiney1999_list_of_reactions.txt  Mulquiney1999_list_of_species.txt  Mulquiney1999_outliers.txt  Mulquiney1999_reaction_to_species_map.txt  Mulquiney1999_simulations.txt  README.md
Liska-et-al-Principles-of-metabolome-conservation-in-animals/DataS3/Holzhutter2004_fitness_coupling_simulations/: statistics_1.txt  statistics_10.txt  statistics_100.txt  statistics_11.txt  statistics_12.txt  statistics_13.txt  statistics_14.txt  statistics_15.txt  statistics_16.txt  statistics_17.txt  statistics_18.txt  statistics_19.txt  statistics_2.txt  statistics_20.txt  statistics_21.txt  statistics_22.txt  statistics_23.txt  statistics_24.txt  statistics_25.txt  statistics_26.txt  statistics_27.txt  statistics_28.txt  statistics_29.txt  statistics_3.txt  statistics_30.txt  statistics_31.txt  statistics_32.txt  statistics_33.txt  statistics_34.txt  statistics_35.txt  statistics_36.txt  statistics_37.txt  statistics_38.txt  statistics_39.txt  statistics_4.txt  statistics_40.txt  statistics_41.txt  (+63 more)
Liska-et-al-Principles-of-metabolome-conservation-in-animals/ScriptS1/: evolution.py  flux_drop_analysis.py  metevolsim.py  random_sensitivity_analysis.py  reaction_to_species_map.py  steady_state.py
Liska-et-al-Principles-of-metabolome-conservation-in-animals/ScriptS2/: 0) Compile datasets.R  1) Detect outlier metabolites.R  2) Fitness coupling exploration.R  3) Holzhutter2004 main figure.R  4) Holzhutter2004 fitness coupling exploration.R  5) Holzhutter2004 MCS distribution.R  6) Mulquiney1999 main figure.R  7) Koenig2012 main figure.R  8) Holhutter2004 dosage sensitivity.R
MetEvolSim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ToyModels/: CMakeLists.txt  README.md
ToyModels/cmake/: make_clean.sh  make_debug.sh
ToyModels/cmake/modules/: Config.h.in
ToyModels/example/: .Rapp.history  POPULATION.R  run.sh
ToyModels/example/ancestor/: ancestor_ode_trajectories.txt  ancestor_reaction_list.txt
ToyModels/example/population/: mean_s.txt  var_s.txt
ToyModels/src/: SBML_test.cpp
ToyModels/src/lib/: Parameters.h  Population.cpp  Population.h
cmake/: make_clean.sh
example/: .Rapp.history  evolution.py  plot_evolution_rate.R  plot_sensitivity_analysis.R  random_sensitivity_analysis.py  run.sh  run_mcmc.py  run_sensitivity_analysis.py  steady_state.py
example/models/: bordbar2015.xml  smallbone2013.xml  smallbone2013_objective_function.txt
example/output/: README.txt
example/resources/: holzhutter2004.xml
metevolsim/: __init__.py  metevolsim.py
output/: ancestor.cps  ancestor.xml  ancestor_output.txt  mutant.cps  mutant.xml  mutant_output.txt  mutation_accumulation.txt
python_metevolsim.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
resources/: reaction_to_param_map.txt
scripts/: plot_evolution_rate.R  plot_sensitivity_analysis.R  run_mcmc.py  run_sensitivity_analysis.py
src/: run.cpp  test.cpp
src/lib/: Enums.h  Individual.h  Macros.h  Node.cpp  ODESolver.cpp  Population.cpp  Prng.cpp  Prng.h  Tree.cpp
test/: test.sh
workflow/: compile_results.py  parameter_map.txt  run_selectionthreshold_simulations.py
workflow/resources/: holzhutter2004.xml
(+188 files in other folders)
